--- a/package.json
+++ b/package.json
@@ -53,11 +53,14 @@
 		"update-latest": "pnpm update --latest && pnpm -r update-latest && pnpm i"
 	},
 	"devDependencies": {
-		"@types/node": "^20.10.3",
+		"@types/node": "^20.10.4",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.1.0",
-		"typescript": "^5.3.2",
-		"vitest": "^1.0.1"
+		"typescript": "^5.3.3",
+		"vitest": "^1.0.2"
 	},
-	"prettier": {}
+	"prettier": {
+		"useTabs": false,
+		"proseWrap": "always"
+	}
 }
