--- a/testers/routes/package.json
+++ b/testers/routes/package.json
@@ -10,9 +10,9 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@css-hooks/core": "^1.3.0",
+    "@css-hooks/core": "^1.4.1",
     "@hono/node-server": "^1.3.1",
-    "hono": "^3.11.1",
+    "hono": "^3.11.3",
     "hwy": "workspace:*",
     "preact-render-to-string": "^6.3.1"
   },
@@ -20,11 +20,12 @@
     "@hwy-js/build": "workspace:*",
     "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
-    "@types/node": "^20.10.3",
+    "@preact/signals": "^1.2.2",
+    "@types/node": "^20.10.4",
     "htmx.org": "^1.9.9",
     "idiomorph": "^0.0.9",
-    "preact": "^10.19.2",
-    "typescript": "^5.3.2"
+    "preact": "^10.19.3",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.14.1"
