--- a/docs/package.json
+++ b/docs/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "@hono/node-server": "^1.3.1",
     "hono": "^3.11.3",
-    "hwy": "workspace:*",
+    "hwy": "0.0.0-beta.0",
     "preact-render-to-string": "^6.3.1"
   },
   "devDependencies": {
-    "@hwy-js/build": "workspace:*",
-    "@hwy-js/client": "workspace:*",
-    "@hwy-js/dev": "workspace:*",
+    "@hwy-js/build": "0.0.0-beta.0",
+    "@hwy-js/client": "0.0.0-beta.0",
+    "@hwy-js/dev": "0.0.0-beta.0",
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.4",
     "@types/nprogress": "^0.2.3",
