--- a/testers/cf-pages/package.json
+++ b/testers/cf-pages/package.json
@@ -4,16 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "hwy-prebuild": "tailwindcss -i src/styles/tw-input.css -o src/styles/tw-output.bundle.css",
     "build": "tsc --noEmit && hwy-build",
-    "start": "node dist/main.js",
     "dev:serve": "hwy-dev-serve",
+    "dev:tailwind": "tailwindcss -i src/styles/tw-input.css -o src/styles/tw-output.bundle.css -w",
     "dev:wrangler": "wrangler pages dev ./dist --compatibility-flag=\"nodejs_compat\" --port=5432 --live-reload",
     "dev": "npm run build && npm-run-all --parallel dev:*",
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@hono/node-server": "^1.3.1",
     "hono": "^3.11.3",
     "hwy": "workspace:*",
     "preact-render-to-string": "^6.3.1"
@@ -26,14 +24,10 @@
     "@hwy-js/utils": "workspace:*",
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.4",
-    "htmx.org": "^1.9.9",
     "npm-run-all": "^4.1.5",
     "preact": "^10.19.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
     "wrangler": "^3.19.0"
-  },
-  "engines": {
-    "node": ">=18.14.1"
   }
 }
