--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.3.1",
+    "devalue": "^4.3.2",
     "hono": "^3.11.3",
     "hwy": "0.0.0-beta.0",
     "preact-render-to-string": "^6.3.1"
