--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "vercel-build": "tsc --noEmit && hwy-build",
-    "start": "node dist/main.js",
+    "start": "node dist/entry.server.js",
     "dev": "hwy-dev-serve",
     "to-latest": "node ./scripts/to-latest.js && pnpm i && npm i",
     "to-workspace": "node ./scripts/to-workspace.js && pnpm i",
@@ -15,13 +15,13 @@
     "@hono/node-server": "^1.3.1",
     "devalue": "^4.3.2",
     "hono": "^3.11.3",
-    "hwy": "0.0.0-beta.1",
+    "hwy": "0.0.0-beta.2",
     "preact-render-to-string": "^6.3.1"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.0.0-beta.1",
-    "@hwy-js/client": "0.0.0-beta.1",
-    "@hwy-js/dev": "0.0.0-beta.1",
+    "@hwy-js/build": "0.0.0-beta.2",
+    "@hwy-js/client": "0.0.0-beta.2",
+    "@hwy-js/dev": "0.0.0-beta.2",
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.4",
     "@types/nprogress": "^0.2.3",
