--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [{ "source": "/(.*)", "destination": "/api/main" }],
   "functions": {
-    "api/main.js": { "includeFiles": "**/*" }
+    "api/entry.server.js": { "includeFiles": "**/*" }
   }
 }
