--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20.10.4",
+		"hono": "^3.11.3",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.1.0",
 		"typescript": "^5.3.3",
