--- a/testers/routes/package.json
+++ b/testers/routes/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc --noEmit && hwy-build",
-    "start": "node dist/main.js",
+    "start": "node dist/entry.server.js",
     "dev": "hwy-dev-serve",
     "update-latest": "pnpm update --latest"
   },
