--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hwy-js/client",
-  "version": "0.13.0",
+  "version": "0.14.0-pre.0",
   "author": {
     "name": "Samuel J. Cook"
   },
