--- a/packages/npm/react/package.json
+++ b/packages/npm/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hwy-js/react",
-  "version": "0.14.2",
+  "version": "0.15.0-pre.0",
   "author": {
     "name": "Samuel J. Cook"
   },
