--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
 	"scripts": {
 		"build:client": "pnpm -r --filter @hwy-js/client run build",
 		"build:react": "pnpm -r --filter @hwy-js/react run build",
-		"build:lit": "pnpm -r --filter @hwy-js/lit run build",
-		"build": "pnpm build:client && pnpm build:react && pnpm build:lit",
+		"build": "pnpm build:client && pnpm build:react",
 		"dev:test": "npx vitest",
 		"dev:client": "pnpm -r --filter @hwy-js/client run dev",
 		"dev:react": "pnpm -r --filter @hwy-js/react run dev",
-		"dev:lit": "pnpm -r --filter @hwy-js/lit run dev",
 		"dev": "pnpm build && npm-run-all --parallel dev:*",
 		"add-pre": "node --experimental-strip-types scripts/npm/utils.ts --add-pre",
 		"remove-pre": "node --experimental-strip-types scripts/npm/utils.ts --remove-pre",
@@ -28,11 +26,10 @@
 		"test": "pnpm build && npx vitest run",
 		"typecheck:client": "pnpm -r --filter @hwy-js/client run typecheck",
 		"typecheck:react": "pnpm -r --filter @hwy-js/react run typecheck",
-		"typecheck:lit": "pnpm -r --filter @hwy-js/lit run typecheck",
 		"typecheck": "npm-run-all --parallel typecheck:*",
-		"pre-publish": "pnpm typecheck && make check && pnpm test",
-		"publish-pre": "pnpm pre-publish && pnpm -r publish-pre",
-		"publish-non-pre": "pnpm pre-publish && pnpm -r publish-non-pre",
+		"run-before-publishing": "pnpm typecheck && make check && pnpm test",
+		"publish-pre": "pnpm run-before-publishing && pnpm -r publish-pre",
+		"publish-non-pre": "pnpm run-before-publishing && pnpm -r publish-non-pre",
 		"update-latest": "pnpm update --latest && pnpm -r update-latest && pnpm i"
 	},
 	"devDependencies": {
