--- a/packages/npm/client/package.json
+++ b/packages/npm/client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@hwy-js/client",
-	"version": "0.15.0-pre.28",
+	"version": "0.16.2",
 	"author": {
 		"name": "Samuel J. Cook"
 	},
@@ -16,7 +16,7 @@
 		"publish-pre": "npm publish --access public --tag pre",
 		"publish-non-pre": "npm publish --access public",
 		"update-latest": "pnpm update --latest",
-		"typecheck": "tsc"
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"history": "^5.3.0"
