--- a/packages/npm/react/package.json
+++ b/packages/npm/react/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@hwy-js/react",
-	"version": "0.15.0-pre.28",
+	"version": "0.16.2",
 	"author": {
 		"name": "Samuel J. Cook"
 	},
@@ -16,7 +16,10 @@
 		"publish-pre": "npm publish --access public --tag pre",
 		"publish-non-pre": "npm publish --access public",
 		"update-latest": "pnpm update --latest",
-		"typecheck": "tsc"
+		"typecheck": "tsc --noEmit"
+	},
+	"dependencies": {
+		"@sjc5/__tskpre": "0.0.0-pre.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.5",
